Fix the alignment of the general links at the bottom of the page in phone-sized windows. Ref ITC-652

--- a/style.css
+++ b/style.css
@@ -1331,6 +1331,7 @@ h5.home_date {
 #footer-main ul {
     text-align: center;
     margin: 0;
+    padding: 0;
 }
 
 #footer-main li {
